<resources>
    <!--全局-->
    <string name="app_name">拇指帮</string>

    <!--启动页-->
    <string name="title_splash">高考拇指帮</string>

    <!--引导页-->
    <string name="title_guide">进入</string>

    <!--主Activity-->
    <string-array name="title_main">
        <item name = "title_main_home">首页</item>
        <item name = "title_main_shop">志愿</item>
        <item name = "title_main_service">圈子</item>
        <item name = "title_main_my">我的</item>
    </string-array>
    <string name="title_main_toolbar">高考拇指帮</string>
    <string name="title_main_navi_header">用户头像</string>
    <string name="title_main_navi_menu_seeting">设置（待开发）</string>
    <string name="title_main_navi_menu_about">关于（待开发）</string>

    <!--FunType-->
    <string name="college_info_description">大学信息</string>
    <string name="college_info_name">大学信息</string>
    <string name="major_info_description">专业信息</string>
    <string name="major_info_name">专业信息</string>
    <string name="simulation_info_description">专业模拟</string>
    <string name="simulation_info_name">专业模拟</string>
    <string name="recommend_info_description">专业推荐</string>
    <string name="recommend_info_name">专业推荐</string>
    <string name="other_info_description">其他</string>
    <string name="other_info_name">其他</string>

    <!--MainActivity-->
    <string name="drawer_navi_header_username">用户名(待开发)</string>
    <string name="drawer_navi_header_email">邮箱(待开发)</string>

    <!--CollegeDetailActivity-->
    <string name="tv_college_histroy">历史</string>
    <string name="tv_college_history_detail">1922年10月，国共合作创办了上海大学，校长为于右任，教务长为瞿秋白，学校享有“武有黄埔、
        文有上大”之盛誉。筚路蓝缕历坎坷，风雨兼程薪火传。1994年5月，上海工业大学、上海科学技术大学、原上海大学、上海科技高等专科学
        校四校优势互补，组建为新的上海大学</string>
    <string name="tv_college_situation">现状</string>
    <string name="tv_college_situation_detail">上海大学在英国2015年QS亚洲大学排名中位列全亚洲第75名、中国大陆第15位（上海第4），
        在2015年QS全球顶尖年轻高校排名中名列中国大陆第1位、世界第51-60位。学校设有宝山（校本部）、延长、嘉定三个校区，占地面积约3000亩，
        建筑面积123万余平方米。现有研究生14310人，全日制本科生20902人，外国留学生4117人。学校的战略目标是建设成为世界一流、特色鲜明的综
        合性研究型大学</string>

    <!--HomeFragment-->
    <!-- Transition Names -->
    <string name="iv_transition_name">iv_home_transition</string>
    <string name="tv_transition_name">tv_home_transition</string>

    <!--MajorSimulationActivity-->
    <string name="tv_simulation_question_name">问题标题（待开发）</string>
    <string name="tv_simulation_question_detail">问题详情，举例：Android插件化和热更新您有了解吗？（待开发）</string>

    <!--LoadingProgressDialog-->
    <string name="loading_dialog">Loading...</string>

    <!--MajorListActivity-->
    <string name="tv_average_salary">平均薪水:</string>
    <string name="tv_school_system">学制:</string>

    <!--MajorInfoDetailActivity-->
    <string name="tv_majorinfo_detail_main_course">主要课程</string>
    <string name="tv_majorinfo_detail_main_goal">专业培养目标</string>
    <string name="tv_majorinfo_detail_main_ability">专业培养能力</string>
    <string name="tv_majorinfo_detail_college">开设高校</string>
    <string name="tv_majorinfo_detail_default">暂无信息</string>
    <string name="btn_majorinfo_detail">查看开设高校</string>
    
    <!--WishFragment-->
    <string name="btn_wish_xyh">查询校友会排名前20</string>
    <string name="btn_wish_wsl">查询武书连排名前20</string>
    <string name="btn_wish_jd">查询交大排名前20</string>
    <string name="btn_wish_qs">查询QS排名前20</string>

    <!--Recommend-->
    <string-array name="provincearr">
        <item>内蒙古</item>
        <item>黑龙江</item>
        <item>新疆</item>
        <item>陕西</item>
        <item>云南</item>
        <item>贵州</item>
        <item>河北</item>
        <item>重庆</item>
        <item>福建</item>
        <item>广西</item>
        <item>吉林</item>
        <item>湖南</item>
        <item>河南</item>
        <item>北京</item>
        <item>安徽</item>
        <item>四川</item>
        <item>湖北</item>
        <item>浙江</item>
        <item>山西</item>
        <item>江西</item>
        <item>江苏</item>
        <item>上海</item>
        <item>甘肃</item>
        <item>广东</item>
        <item>山东</item>
        <item>辽宁</item>
    </string-array>
    
    <string-array name="subjectarr">
        <item>文科</item>
        <item>理科</item>
    </string-array>
</resources>
