<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wish_btn_margin"
            android:background="@drawable/btn_wish_selector"
            tools:text="查询校友会排名前20"
            android:text="@string/btn_wish_xyh"
            android:clickable="true"/>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wish_btn_margin"
            android:background="@drawable/btn_wish_selector"
            tools:text="查询武书连排名前20"
            android:text="@string/btn_wish_wsl"/>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wish_btn_margin"
            android:background="@drawable/btn_wish_selector"
            tools:text="查询交大排名前20"
            android:text="@string/btn_wish_jd"/>

        <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/wish_btn_margin"
            android:background="@drawable/btn_wish_selector"
            tools:text="查询QS排名前20"
            android:text="@string/btn_wish_qs"/>

    </LinearLayout>
</ScrollView>
